# boatrace-scraping

./: .gitignore  README.md  pyproject.toml
boatrace/: __init__.py  scraping.py  setting.py  version.py
boatrace/common/: __init__.py  cast_function.py  column_datatype.py  column_mixin.py  get_beautiful_soup.py  logger.py  read_write.py  sanitize_text.py  split_list.py
boatrace/parameter/: __init__.py  custom_param.py  enums.py  grade.py  tool_param.py  url.py
boatrace/scrape/race_before/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_card/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_odds/exacta/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_odds/place/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_odds/quinella/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_odds/quinella_place/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_odds/trifecta/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_odds/trio/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_odds/win/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_pitreport/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/race_result/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/schedule/: __init__.py  column.py  param.py  scraping.py
boatrace/scrape/track/: __init__.py  column.py  param.py  scraping.py
samples/: dev_notebook.ipynb  pyproject.toml  sample_scrape.py
