[tool.poetry]
name = "boatrace"
version = "1.0.0"
description = ""
authors = ["sakagami0615 <sakagami0615@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
toml = "^0.10.2"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["*/__init__.py"]

[tool.boatrace]
save_html_cache = true
cache_folder = "./cache"